--- a/variables.html
+++ b/variables.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Variables</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        body { font-family: 'Inter', sans-serif; }
+    </style>
+</head>
+<body class="bg-slate-100 text-slate-800 p-8 min-h-screen">
+    <div class="max-w-4xl mx-auto">
+        <header class="mb-8 border-b-2 border-slate-300 pb-4 flex justify-between items-center">
+            <h1 class="text-3xl font-bold">Variables</h1>
+            <a href="index.html" class="text-blue-600 hover:text-blue-800 transition-colors duration-200">
+                &larr; Back to Home
+            </a>
+        </header>
+        
+        <main>
+            <p class="text-lg text-slate-600">
+                (Content for the Variables page will go here. Please provide the text in your next prompt.)
+            </p>
+        </main>
+    </div>
+</body>
+</html>
 
