--- a/introduction.html
+++ b/introduction.html
@@ -74,7 +74,7 @@
         @media (min-width: 1024px) {
             .page-container {
                 display: grid;
-                grid-template-columns: auto 1fr;
+                grid-template-columns: 64px 1fr;
                 gap: 2rem;
                 padding: 0;
             }
@@ -86,15 +86,15 @@
                 position: sticky;
                 top: 0;
                 height: 100vh;
-                background-color: #ffffff;
-                box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-                padding: 1.5rem;
+                background-color: #f5f5f5;
+                box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
+                padding: 1.5rem 0.5rem;
                 transition: width 0.3s ease-in-out;
                 overflow-y: auto;
                 width: 64px; /* Default collapsed width */
                 display: flex;
                 flex-direction: column;
-                align-items: flex-start;
+                align-items: center;
             }
             .sidebar-link {
                 display: flex;
@@ -102,14 +102,15 @@
                 gap: 1rem;
                 padding: 0.75rem 0.5rem;
                 border-radius: 0.5rem;
-                transition: background-color 0.2s;
+                transition: background-color 0.2s, color 0.2s;
                 white-space: nowrap;
                 overflow: hidden;
                 width: 100%;
                 justify-content: flex-start;
             }
             .sidebar-link:hover {
-                background-color: #f3f4f6;
+                background-color: #e5e5e5;
+                color: #2563eb;
             }
             .sidebar:hover {
                 width: 250px;
