--- a/introduction.html
+++ b/introduction.html
@@ -73,18 +73,21 @@
         /* Desktop specific styles for full-width layout */
         @media (min-width: 1024px) {
             .page-container {
-                display: grid;
-                grid-template-columns: 64px 1fr;
-                gap: 2rem;
+                display: flex;
+                flex-direction: row;
                 padding: 0;
             }
             .main-content {
                 padding-top: 2rem;
                 padding-right: 2rem;
+                flex-grow: 1;
+                transition: margin-left 0.3s ease-in-out;
+                margin-left: 64px;
             }
             .sidebar {
-                position: sticky;
+                position: fixed;
                 top: 0;
+                left: 0;
                 height: 100vh;
                 background-color: #f5f5f5;
                 box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
@@ -95,6 +98,7 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                z-index: 20;
             }
             .sidebar-link {
                 display: flex;
@@ -114,6 +118,9 @@
             }
             .sidebar:hover {
                 width: 250px;
+            }
+            .sidebar:hover ~ .main-content {
+                margin-left: 250px;
             }
             .sidebar:hover .sidebar-text {
                 display: block;
