--- a/introduction.html
+++ b/introduction.html
@@ -155,6 +155,12 @@
             .sidebar-links::-webkit-scrollbar {
                 display: none;
             }
+            .sidebar-link .material-icons {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 32px;
+            }
         }
     </style>
 </head>
@@ -249,9 +255,11 @@
                     </a>
                 </nav>
             </div>
-            <button class="sidebar-toggle" id="sidebar-toggle" aria-expanded="false">
-                <span class="material-icons sidebar-toggle-icon">chevron_left</span>
-            </button>
+            <div class="mt-auto pt-4 border-t border-slate-300">
+                <button class="sidebar-toggle flex items-center justify-center w-full" id="sidebar-toggle" aria-expanded="false" aria-label="Toggle sidebar">
+                    <span class="material-icons text-slate-600 transition-transform duration-300">chevron_left</span>
+                </button>
+            </div>
         </aside>
 
         <main class="main-content p-4 sm:p-8" id="main-content">
