--- a/introduction.html
+++ b/introduction.html
@@ -200,64 +200,64 @@
             <div class="sidebar-header">
                 <a href="index.html" class="flex items-center gap-2">
                     <span class="material-icons text-blue-600 text-3xl">school</span>
-                    <h1 class="text-2xl font-bold text-slate-900 sidebar-text">Introduction</h1>
+                    <h1 class="text-2xl font-bold text-slate-900 sidebar-text">PyHome</h1>
                 </a>
             </div>
             <div class="sidebar-links">
                 <nav class="space-y-2">
-                    <a href="introduction.html" class="sidebar-link font-semibold text-blue-600">
-                        <span class="material-icons">school</span>
+                    <a href="introduction.html" class="sidebar-link font-semibold text-blue-600 group">
+                        <span class="material-icons sidebar-icon text-blue-600">school</span>
                         <span class="sidebar-text">Introduction</span>
                     </a>
-                    <a href="programming-language.html" class="sidebar-link text-slate-700 hover:text-blue-600">
-                        <span class="material-icons">code</span>
+                    <a href="programming-language.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-icons sidebar-icon">code</span>
                         <span class="sidebar-text">Programming Language</span>
                     </a>
-                    <a href="variables.html" class="sidebar-link text-slate-700 hover:text-blue-600">
-                        <span class="material-icons">data_object</span>
+                    <a href="variables.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-icons sidebar-icon">data_object</span>
                         <span class="sidebar-text">Variables</span>
                     </a>
-                    <a href="conditional-statements.html" class="sidebar-link text-slate-700 hover:text-blue-600">
-                        <span class="material-icons">call_split</span>
+                    <a href="conditional-statements.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-icons sidebar-icon">call_split</span>
                         <span class="sidebar-text">Conditional Statements</span>
                     </a>
-                    <a href="looping.html" class="sidebar-link text-slate-700 hover:text-blue-600">
-                        <span class="material-icons">autorenew</span>
+                    <a href="looping.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-icons sidebar-icon">autorenew</span>
                         <span class="sidebar-text">Looping</span>
                     </a>
-                    <a href="lists-arrays.html" class="sidebar-link text-slate-700 hover:text-blue-600">
-                        <span class="material-icons">list</span>
+                    <a href="lists-arrays.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-icons sidebar-icon">list</span>
                         <span class="sidebar-text">Lists or Arrays</span>
                     </a>
-                    <a href="tuples.html" class="sidebar-link text-slate-700 hover:text-blue-600">
-                        <span class="material-icons">widgets</span>
+                    <a href="tuples.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-icons sidebar-icon">widgets</span>
                         <span class="sidebar-text">Tuples</span>
                     </a>
-                    <a href="sets-dictionaries.html" class="sidebar-link text-slate-700 hover:text-blue-600">
-                        <span class="material-icons">dns</span>
+                    <a href="sets-dictionaries.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-icons sidebar-icon">dns</span>
                         <span class="sidebar-text">Sets and Dictionaries</span>
                     </a>
-                    <a href="numpy.html" class="sidebar-link text-slate-700 hover:text-blue-600">
-                        <span class="material-icons">calculate</span>
+                    <a href="numpy.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-icons sidebar-icon">calculate</span>
                         <span class="sidebar-text">NumPy Introduction</span>
                     </a>
-                    <a href="pandas.html" class="sidebar-link text-slate-700 hover:text-blue-600">
-                        <span class="material-icons">grid_on</span>
+                    <a href="pandas.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-icons sidebar-icon">grid_on</span>
                         <span class="sidebar-text">Pandas Introduction</span>
                     </a>
-                    <a href="files-reading.html" class="sidebar-link text-slate-700 hover:text-blue-600">
-                        <span class="material-icons">description</span>
+                    <a href="files-reading.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-icons sidebar-icon">description</span>
                         <span class="sidebar-text">Files Reading</span>
                     </a>
-                    <a href="combined-practice.html" class="sidebar-link text-slate-700 hover:text-blue-600">
-                        <span class="material-icons">extension</span>
+                    <a href="combined-practice.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-icons sidebar-icon">extension</span>
                         <span class="sidebar-text">Combined Practice</span>
                     </a>
                 </nav>
             </div>
             <div class="mt-auto pt-4 border-t border-slate-300">
                 <button class="sidebar-toggle flex items-center justify-center w-full" id="sidebar-toggle" aria-expanded="false" aria-label="Toggle sidebar">
-                    <span class="material-icons text-slate-600 transition-transform duration-300">chevron_left</span>
+                    <span class="material-icons text-slate-600 transition-transform duration-300">keyboard_tab</span>
                 </button>
             </div>
         </aside>
