--- a/programming-language.html
+++ b/programming-language.html
@@ -7,25 +7,325 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body { font-family: 'Inter', sans-serif; }
+        .code-block {
+            background-color: #1a1a1a;
+            color: #e0e0e0;
+            padding: 1.5rem;
+            border-radius: 0.75rem;
+            font-family: 'Fira Code', 'JetBrains Mono', monospace;
+            overflow-x: auto;
+            position: relative;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.06);
+            border: 1px solid #333;
+        }
+        .code-keyword { color: #569cd6; }
+        .code-function { color: #dcdcaa; }
+        .code-string { color: #ce9178; }
+        .code-comment { color: #6a9955; }
+        .code-operator { color: #d4d4d4; }
+        .code-variable { color: #9cdcfe; }
+        .code-number { color: #b5cea8; }
+        .code-brackets { color: #d4d4d4; }
+        .menu-dropdown-content {
+            display: none;
+            position: absolute;
+            top: 100%;
+            right: 0;
+            background-color: #ffffff;
+            min-width: 200px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 10;
+            border-radius: 0.5rem;
+            padding: 0.5rem 0;
+            transition: all 0.3s ease-in-out;
+            transform-origin: top right;
+            opacity: 0;
+            transform: scale(0.9);
+        }
+        .menu-dropdown-content.show {
+            display: block;
+            opacity: 1;
+            transform: scale(1);
+        }
+        .menu-dropdown-content a {
+            color: #4b5563;
+            padding: 0.75rem 1rem;
+            text-decoration: none;
+            display: block;
+            transition: background-color 0.2s;
+        }
+        .menu-dropdown-content a:hover {
+            background-color: #f3f4f6;
+        }
+        /* Desktop specific styles for full-width layout */
+        @media (min-width: 1024px) {
+            .page-container {
+                display: flex;
+                flex-direction: row;
+                padding: 0;
+            }
+            .main-content {
+                padding-top: 2rem;
+                padding-right: 2rem;
+                flex-grow: 1;
+                transition: margin-left 0.4s ease-in-out;
+                margin-left: 64px;
+            }
+            .sidebar {
+                position: fixed;
+                top: 0;
+                left: 0;
+                height: 100vh;
+                background-color: #f5f5f5;
+                box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
+                padding: 1.5rem 0.5rem;
+                transition: width 0.4s ease-in-out;
+                overflow-y: auto;
+                width: 64px;
+                display: flex;
+                flex-direction: column;
+                z-index: 20;
+            }
+            .sidebar-link {
+                display: flex;
+                align-items: center;
+                gap: 1rem;
+                padding: 0.75rem 0.5rem;
+                border-radius: 0.5rem;
+                transition: background-color 0.2s, color 0.2s;
+                white-space: nowrap;
+                overflow: hidden;
+                width: 100%;
+                justify-content: flex-start;
+            }
+            .sidebar-link:hover {
+                background-color: #e5e5e5;
+            }
+            header {
+                display: none;
+            }
+            .sidebar-header {
+                display: flex;
+                align-items: center;
+                gap: 0.5rem;
+                padding-bottom: 1rem;
+                border-bottom: 1px solid #e5e7eb;
+                margin-bottom: 1rem;
+                justify-content: center;
+            }
+            .sidebar-toggle {
+                display: flex;
+                justify-content: center;
+                width: 100%;
+                margin-top: auto;
+                margin-bottom: 1rem;
+                cursor: pointer;
+            }
+            .sidebar-toggle-icon {
+                font-size: 2rem;
+                color: #4b5563;
+                transition: transform 0.3s ease-in-out;
+            }
+            .sidebar-expanded .sidebar-toggle-icon {
+                transform: rotate(180deg);
+            }
+            .sidebar-expanded {
+                width: 250px;
+            }
+            .sidebar-expanded ~ .main-content {
+                margin-left: 250px;
+            }
+            .sidebar-expanded .sidebar-text {
+                display: block;
+            }
+            .sidebar-text {
+                display: none;
+            }
+            .sidebar-links {
+                overflow-y: auto;
+                scrollbar-width: none;
+                -ms-overflow-style: none;
+                flex-grow: 1;
+                width: 100%;
+            }
+            .sidebar-links::-webkit-scrollbar {
+                display: none;
+            }
+            .sidebar-link .material-symbols-outlined {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 32px;
+            }
+        }
     </style>
 </head>
-<body class="bg-slate-100 text-slate-800 p-8 min-h-screen">
-    <div class="max-w-4xl mx-auto">
-        <header class="mb-8 border-b-2 border-slate-300 pb-4 flex justify-between items-center">
-            <h1 class="text-3xl font-bold">Programming Language</h1>
-            <a href="index.html" class="text-blue-600 hover:text-blue-800 transition-colors duration-200">
-                &larr; Back to Home
-            </a>
-        </header>
+<body class="bg-slate-100 text-slate-800">
+
+    <!-- Mobile Header -->
+    <header class="lg:hidden bg-slate-100 p-4 border-b-2 border-slate-300 flex justify-between items-center relative">
+        <a href="index.html" class="flex items-center space-x-2 cursor-pointer">
+            <span class="material-symbols-outlined text-blue-600">code</span>
+            <h1 class="text-2xl font-bold text-slate-900">Programming Language</h1>
+        </a>
         
-        <main>
-            <p class="text-lg text-slate-600">
-                (Content for the Programming Language page will go here. Please provide the text in your next prompt.)
-            </p>
+        <div class="relative">
+            <button id="menu-button" class="bg-blue-600 text-white font-semibold py-2 px-4 rounded-full shadow-lg hover:bg-blue-700 transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 text-sm">
+                Menu
+            </button>
+            <div id="menu-dropdown" class="menu-dropdown-content">
+                <a href="introduction.html">Introduction</a>
+                <a href="programming-language.html">Programming Language</a>
+                <a href="variables.html">Variables</a>
+                <a href="conditional-statements.html">Conditional Statements</a>
+                <a href="looping.html">Looping</a>
+                <a href="lists-arrays.html">Lists or Arrays</a>
+                <a href="tuples.html">Tuples</a>
+                <a href="sets-dictionaries.html">Sets and Dictionaries</a>
+                <a href="numpy.html">NumPy Introduction</a>
+                <a href="pandas.html">Pandas Introduction</a>
+                <a href="files-reading.html">Files Reading and Cleaning Data</a>
+                <a href="combined-practice.html">Combined Practice</a>
+            </div>
+        </div>
+    </header>
+
+    <div class="page-container">
+        <!-- Sidebar for larger screens -->
+        <aside class="sidebar hidden lg:flex" id="sidebar">
+            <div class="sidebar-header">
+                <a href="index.html" class="flex items-center gap-2">
+                    <span class="material-symbols-outlined text-blue-600 text-3xl">school</span>
+                    <h1 class="text-2xl font-bold text-slate-900 sidebar-text">PyHome</h1>
+                </a>
+            </div>
+            <div class="sidebar-links">
+                <nav class="space-y-2">
+                    <a href="introduction.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-symbols-outlined sidebar-icon">school</span>
+                        <span class="sidebar-text">Introduction</span>
+                    </a>
+                    <a href="programming-language.html" class="sidebar-link font-semibold text-blue-600 group">
+                        <span class="material-symbols-outlined sidebar-icon text-blue-600">code</span>
+                        <span class="sidebar-text">Programming Language</span>
+                    </a>
+                    <a href="variables.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-symbols-outlined sidebar-icon">data_object</span>
+                        <span class="sidebar-text">Variables</span>
+                    </a>
+                    <a href="conditional-statements.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-symbols-outlined sidebar-icon">call_split</span>
+                        <span class="sidebar-text">Conditional Statements</span>
+                    </a>
+                    <a href="looping.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-symbols-outlined sidebar-icon">autorenew</span>
+                        <span class="sidebar-text">Looping</span>
+                    </a>
+                    <a href="lists-arrays.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-symbols-outlined sidebar-icon">list</span>
+                        <span class="sidebar-text">Lists or Arrays</span>
+                    </a>
+                    <a href="tuples.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-symbols-outlined sidebar-icon">widgets</span>
+                        <span class="sidebar-text">Tuples</span>
+                    </a>
+                    <a href="sets-dictionaries.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-symbols-outlined sidebar-icon">dns</span>
+                        <span class="sidebar-text">Sets and Dictionaries</span>
+                    </a>
+                    <a href="numpy.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-symbols-outlined sidebar-icon">calculate</span>
+                        <span class="sidebar-text">NumPy Introduction</span>
+                    </a>
+                    <a href="pandas.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-symbols-outlined sidebar-icon">grid_on</span>
+                        <span class="sidebar-text">Pandas Introduction</span>
+                    </a>
+                    <a href="files-reading.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-symbols-outlined sidebar-icon">description</span>
+                        <span class="sidebar-text">Files Reading</span>
+                    </a>
+                    <a href="combined-practice.html" class="sidebar-link text-slate-700 hover:text-blue-600 group">
+                        <span class="material-symbols-outlined sidebar-icon">extension</span>
+                        <span class="sidebar-text">Combined Practice</span>
+                    </a>
+                </nav>
+            </div>
+            <div class="mt-auto pt-4 border-t border-slate-300">
+                <button class="sidebar-toggle flex items-center justify-center w-full" id="sidebar-toggle" aria-expanded="false" aria-label="Toggle sidebar">
+                    <span class="material-symbols-outlined text-slate-600 transition-transform duration-300">flip</span>
+                </button>
+            </div>
+        </aside>
+
+        <main class="main-content p-4 sm:p-8" id="main-content">
+            <h2 class="text-xl sm:text-2xl font-bold mb-4 sm:mb-6">Programming Language</h2>
+            <div class="bg-white rounded-xl sm:rounded-2xl p-4 sm:p-6 mb-4 sm:mb-6 shadow-lg border border-slate-200">
+                <p class="text-slate-600 mb-2 sm:mb-4 text-sm sm:text-base">Content for Programming Language</p>
+            </div>
         </main>
     </div>
+    <script>
+        const menuButton = document.getElementById('menu-button');
+        const menuDropdown = document.getElementById('menu-dropdown');
+        menuButton.addEventListener('click', () => {
+            menuDropdown.classList.toggle('show');
+        });
+
+        const sidebar = document.getElementById('sidebar');
+        const sidebarToggle = document.getElementById('sidebar-toggle');
+        const mainContent = document.getElementById('main-content');
+        const sidebarLinks = document.querySelectorAll('.sidebar-link');
+        const toggleIcon = sidebarToggle.querySelector('.material-symbols-outlined');
+
+        // Initial check for screen size
+        if (window.innerWidth >= 1024) {
+            mainContent.style.marginLeft = '64px';
+        }
+
+        sidebarToggle.addEventListener('click', () => {
+            const isExpanded = sidebar.classList.toggle('sidebar-expanded');
+            
+            if (isExpanded) {
+                mainContent.style.marginLeft = '250px';
+                toggleIcon.textContent = 'keyboard_tab_rtl';
+            } else {
+                mainContent.style.marginLeft = '64px';
+                toggleIcon.textContent = 'flip';
+            }
+        });
+
+        // Optional: Keep the state consistent on window resize
+        window.addEventListener('resize', () => {
+            if (window.innerWidth < 1024) {
+                sidebar.classList.remove('sidebar-expanded');
+                mainContent.style.marginLeft = '0';
+            } else {
+                if (!sidebar.classList.contains('sidebar-expanded')) {
+                    mainContent.style.marginLeft = '64px';
+                }
+            }
+        });
+
+        sidebarLinks.forEach(link => {
+            link.addEventListener('mouseenter', () => {
+                const icon = link.querySelector('.sidebar-icon');
+                if (icon) {
+                    icon.style.color = '#2563eb';
+                }
+            });
+
+            link.addEventListener('mouseleave', () => {
+                const icon = link.querySelector('.sidebar-icon');
+                if (icon) {
+                    icon.style.color = ''; // Revert to default
+                }
+            });
+        });
+    </script>
 </body>
 </html>
